--- a/greenhouse/greenhouse.conf
+++ b/greenhouse/greenhouse.conf
@@ -4,7 +4,13 @@
 #
 
 ###############################################
+# Main Config Section
+[Greenhouse]
 
+	log_folder = '../logs/'
+
+
+###############################################
 # This is the tweeter app/api section
 
 [Tweeter]
