--- a/greenhouse/greenhouse.conf
+++ b/greenhouse/greenhouse.conf
@@ -6,14 +6,24 @@
 ###############################################
 # Main Config Section
 [Greenhouse]
+	
+	debug = 1
 
 	log_folder = '../logs/'
+	image_folder = './captures/'
 
+	looptime = 1
+
+	[[Location]]
+		latitude = 51.455313
+		longitude = -2.591902
+		elevation = 100
+		
 
 ###############################################
 # This is the tweeter app/api section
 
-[Tweeter]
+[Twitter]
 
 	app_title = Greenhouse App
 	app_user = davies-barnard
@@ -22,3 +32,8 @@
 	access_token = 1494990330-gof6WCMSJBPM71xudG1HN5sHvpncinU2mShYqcs
 	access_secret = yIn17rwTqMdlSXGnMs7f7UhD2yYHAQ8ipXdq1GXY9emqS
 
+[Camera]
+	
+	alpha = 150
+	rotation = 0
+	resolution = 600,600
