--- a/greenhouse/greenhouse.conf
+++ b/greenhouse/greenhouse.conf
@@ -8,6 +8,8 @@
 [Greenhouse]
 	
 	debug = 1
+	
+	simulator = 1
 
 	log_folder = '../logs/'
 	image_folder = './captures/'
@@ -19,6 +21,30 @@
 		longitude = -2.591902
 		elevation = 100
 		
+[Reports]
+
+#  [[day]]
+#    timediff = 86400
+#    filename = day.png
+
+#  [[week]]
+#    timediff = 604800
+#    filename = week.png
+
+#  [[month]]
+#    timediff = 2419200
+#    filename = month.png
+    
+  [[year]]
+    timediff = 31449600
+    filename = year.png
+    linecolor = #FF4510
+
+#  [[alltime]]
+#    timediff = -1
+#    filename = alltime.png
+
+
 
 ###############################################
 # This is the tweeter app/api section
