Getting Sensors to work

--- a/greenhouse/greenhouse.conf
+++ b/greenhouse/greenhouse.conf
@@ -9,7 +9,7 @@
 	
 	debug = 1
 	
-	simulator = 1
+	simulator = 0
 
 	log_folder = '../logs/'
 	image_folder = './captures/'
@@ -23,26 +23,41 @@
 		
 [Reports]
 
-#  [[day]]
-#    timediff = 86400
-#    filename = day.png
+    path = 'public_html'
+     
 
-#  [[week]]
-#    timediff = 604800
-#    filename = week.png
+    [[PlotOptions]]
 
-#  [[month]]
-#    timediff = 2419200
-#    filename = month.png
-    
-  [[year]]
-    timediff = 31449600
-    filename = year.png
-    linecolor = #FF4510
+         width = 480
+         height = 320
 
-#  [[alltime]]
-#    timediff = -1
-#    filename = alltime.png
+         fontfamily = 'Helvetica'
+         fontsize = 8
+         fontcolor = #7f7f7f
+
+
+    [[Plots]]
+
+    #  [[[day]]]
+    #    timediff = 86400
+    #    filename = day.png
+
+    #  [[[week]]]
+    #    timediff = 604800
+    #    filename = week.png
+
+    #  [[[month]]]
+    #    timediff = 2419200
+    #    filename = month.png
+        
+    #  [[[year]]]
+    #    timediff = 31449600
+    #    filename = year.png
+    #    linecolor = #FF4510
+
+    #  [[[alltime]]]
+    #    timediff = -1
+    #    filename = alltime.png
 
 
 
