Home Improvements and Tests

--- a/greenhouse/greenhouse.conf
+++ b/greenhouse/greenhouse.conf
@@ -9,12 +9,12 @@
 	
 	debug = 1
 	
-	simulator = 0
+	simulator = "True"
 
 	log_folder = '../logs/'
 	image_folder = './captures/'
 
-	looptime = 1
+	looptime = 10
 
 	[[Location]]
 		latitude = 51.455313
@@ -78,6 +78,7 @@
 	alpha = 150
 	rotation = 0
 	resolution = 600,600
+	interval = 60
 
 [Database]
 
