--- a/greenhouse/greenhouse.conf
+++ b/greenhouse/greenhouse.conf
@@ -11,10 +11,9 @@
 	
 	simulator = "True"
 
-	log_folder = '../logs/'
-	image_folder = './captures/'
-
-	looptime = 10
+	log_folder = './logs'
+	
+	looptime = 2
 
 	[[Location]]
 		latitude = 51.455313
@@ -78,7 +77,9 @@
 	alpha = 150
 	rotation = 0
 	resolution = 600,600
-	interval = 60
+	interval = 10
+	
+	path = 'captures'
 
 [Database]
 
